--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
         Our in‑flight generator delicately produces and injects O<sub>3</sub> in the lower stratosphere—right where it matters—
         complementing natural recovery and strengthening our planet’s UV shield.
       </p>
-      <div class="row" style="margin-top:24px">
-        <div class="card">
+
+      <div style="margin-top:24px;display:flex;justify-content:flex-start;gap:24px;">
+        <div class="card hero-center">
           <form id="waitlist" action="#" method="post" data-mode="demo">
             <label for="email" class="h3" style="margin-top:0">Join the waitlist</label>
             <p class="note">We’ll notify you about milestones and pilot programs.</p>
@@ -49,12 +50,6 @@
             <p id="waitlist-msg" class="note" style="margin-top:10px;display:none"></p>
           </form>
         </div>
-        <div class="hero-art card">
-          <div>
-            <div class="badge">Concept illustration</div>
-            <p style="margin:10px 0 0">Aircraft-mounted ozone generator → measured, localized O<sub>3</sub> injection in the lower stratosphere</p>
-          </div>
-        </div>
       </div>
 
       <div class="grid-3" style="margin-top:24px">
@@ -64,7 +59,7 @@
       </div>
     </section>
 
-    <section class="section container">
+    <section class="container" style="padding:16px 24px">
       <div class="grid-3">
         <div class="card">
           <h3 class="h3">Why it matters</h3>
@@ -81,8 +76,8 @@
       </div>
     </section>
 
-    <section class="section container">
-      <div class="row">
+    <section class="container" style="padding:16px 24px">
+      <div class="grid-2">
         <div class="card">
           <h2 class="h2">Pilot program</h2>
           <p>We’re preparing a limited pilot with partner airlines to validate efficiency, safety, and operations. If your organization is interested in collaborating, join the waitlist and note “pilot.”</p>
