Update LinkedIn and X links in navigation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <header class="nav"><div class="nav-inner container">
   <div class="brand"><div class="logo" aria-hidden="true"></div><a href="./" style="font-size:18px">SkyForge</a></div>
-  <nav style="display:flex;gap:16px"><a href="./why-now.html">Why Now</a><a href="https://www.linkedin.com/company/skyforgeinc" target="_blank" rel="noopener">LinkedIn</a><a href="https://x.com/skyforgezone" target="_blank" rel="noopener">X</a><a href="mailto:info@skyforge.zone">Contact</a></nav>
+  <nav style="display:flex;gap:16px"><a href="./why-now.html">Why Now</a><a href="https://www.linkedin.com/company/skyforge/" target="_blank" rel="noopener">LinkedIn</a><a href="https://x.com/RestorO3Layer" target="_blank" rel="noopener">X</a><a href="mailto:info@skyforge.zone">Contact</a></nav>
 </div></header>
 <main>
 <section class="hero container">
