--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
 <meta name="description" content="SkyForge integrates atmospheric ozone technology into commercial aviation to accelerate stratospheric ozone restoration."/>
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./styles.css?v=10"/>
+<link rel="stylesheet" href="./styles.css?v=11"/>
 <script defer src="./scripts.js"></script>
 </head>
 <body>
 <header class="nav"><div class="nav-inner container">
   <div class="brand"><div class="logo" aria-hidden="true"></div><a href="./" style="font-size:18px">SkyForge</a></div>
-  <nav style="display:flex;gap:16px"><a href="./why-now.html">Why Now</a><a href="https://www.linkedin.com/company/skyforge/" target="_blank" rel="noopener">LinkedIn</a><a href="https://x.com/RestorO3Layer" target="_blank" rel="noopener">X</a><a href="mailto:info@skyforge.zone">Contact</a></nav>
+  <nav style="display:flex;gap:16px"><a href="./why-now.html">Why Now</a>
+    <a href="https://www.linkedin.com/company/skyforge/" target="_blank" rel="noopener" aria-label="LinkedIn">
+    <!-- Bootstrap Icons: linkedin (inline SVG, fill=currentColor) -->
+    <svg viewBox="0 0 16 16" fill="currentColor" aria-hidden="true">
+      <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175A1.163 1.163 0 0 1 0 14.854V1.146zM4.943 12.306V6.169H3.13v6.137h1.813zm-.906-7.004c.607 0 .982-.405.982-.911-.011-.518-.375-.911-.971-.911-.596 0-.982.393-.982.911 0 .506.375.911.96.911h.011zM13.306 12.306V8.428c0-2.067-1.104-3.027-2.577-3.027-1.188 0-1.723.656-2.023 1.116v.038h-.013a5.53 5.53 0 0 1 .013-.038V6.169H6.897s.024.53 0 6.137h1.813V8.88c0-.177.013-.354.065-.48.143-.354.468-.72 1.013-.72.715 0 1 .543 1 1.339v3.287h1.817z"/>
+    </svg>
+  </a>
+    <a href="https://x.com/RestorO3Layer" target="_blank" rel="noopener">X</a>
+    <a href="mailto:info@skyforge.zone">Contact</a></nav>
 </div></header>
 <main>
 <section class="hero container">
